// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics / Component / With Complex Selectors attribute selectors 1`] = `
<storybook-wrapper>
  <storybook-attribute-selector
    foo="bar"
  >
    <h3>
      Attribute selector
    </h3>
     Selector: "storybook-attribute-selector[foo=bar]" 
    <br />
     Generated template: "&lt;storybook-attribute-selector foo="bar"&gt;&lt;/storybook-attribute-selector&gt;" 
  </storybook-attribute-selector>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With Complex Selectors class selectors 1`] = `
<storybook-wrapper>
  <storybook-attribute-value-selector
    class="foo"
  >
    <h3>
      Class selector
    </h3>
     Selector: "storybook-class-selector.foo" 
    <br />
     Generated template: "&lt;storybook-class-selector class="bar"&gt;&lt;/storybook-class-selector&gt;" 
  </storybook-attribute-value-selector>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With Complex Selectors multiple selectors 1`] = `
<storybook-wrapper>
  <storybook-multiple-selector>
    <h3>
      Multiple selector
    </h3>
     Selector: "storybook-multiple-selector, storybook-multiple-selector2" 
    <br />
     Generated template: "&lt;storybook-multiple-selector&gt;&lt;/storybook-multiple-selector&gt;" 
  </storybook-multiple-selector>
</storybook-wrapper>
`;
